--- a/MyExampleApps/Views/Home/Index.cshtml
+++ b/MyExampleApps/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="jumbotron">
+    <h1>Welcome!!</h1>
     <h1>My Azure WebApps Connected with MyGitRepo Repository.</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
